# tuition-api

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
app/: auth.py  config.py  main.py  types.py
app/agent/: eval.py  schema.py  state.py
app/agent/lg/: model.py  post_hooks.py  stream_adapter.py  student_agent.py  subagent.py  supervisor.py  template_agent.py  timetable_agent.py  tool_factories.py
app/agent/tools/: __init__.py  shared.py  student_tools.py  template_tools.py  timetable_tools.py
app/features/agent/: eval.py  persistence.py  router.py  schema.py  utils.py
app/features/agent/lg/: agent_state.py  handoff.py  model.py  (+9 more)
app/features/google/: auth.py  calendar.py  cleanup.py  drive.py  errors.py  router.py  sync.py
app/features/payment/: router.py  service.py
app/features/students/: router.py  service.py
app/features/templates/: router.py
app/features/timetable/: router.py  service.py
app/lib/: payment.py  templates.py  timetable_slots.py  utils.py
app/routers/: agent.py  google.py  payment.py  students.py  templates.py  timetable.py
app/services/: supabase_client.py
app/services/gemini/: slot_generation.py
app/services/google/: auth.py  calendar.py  cleanup.py  drive.py  sync.py
app/shared/: db.py  errors.py  response_models.py  schema.py  utils.py
app/shared/gemini/: client.py  slot_generation.py
claude/: agent.md  google.md  timetable.md
docs/: agent-tools.md  decisions.md  schema.sql
tests/: conftest.py  test_agent.py  test_auth.py  test_health.py  test_payment.py  test_students.py  test_timetable.py
(+4 files in other folders)
